api-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: redahimmi/medical-chatbot-api-service:dd414f79043306fa300265b2f08d7bf1d783b0a4
        resources:
          limits:
            memory: "1Gi"
            cpu: "100m"
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
