api-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: prod
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8001
    protocol: TCP
