backend-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: prod
spec:
  selector:
    app: chat
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
