ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: prod
  annotations:
    kubernetes.io/ingressClassName: "external-nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - "ai.redahimmi.tech"
      secretName: tls-cert-prod
      
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/api/conversation"
            backend:
              service:
                name: api-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: backend-service
                port:
                  number: 80
